# nebullvm

.github/workflows/: cloud-surfer-ci.yaml
apps/accelerate/cloud_surfer/: Makefile  \  pyproject.toml  pytest.ini
apps/accelerate/cloud_surfer/deploy/: Dockerfile.py310-cu118  Dockerfile.py310-cu12  Dockerfile.py39-cu113  Dockerfile.py39-cu116  Dockerfile.py39-cu118  Dockerfile.py39-cu12
apps/accelerate/cloud_surfer/resources/: cluster.yaml
apps/accelerate/cloud_surfer/resources/clusters/: azure-full.yaml  azure.yaml  example.yaml  gcp-full.yaml
apps/accelerate/cloud_surfer/resources/examples/basic_experiment/: data_loader.py  experiment.yaml  model_loader.py
apps/accelerate/cloud_surfer/resources/examples/lstm/: data_loader.py  experiment.yaml  model_loader.py
apps/accelerate/cloud_surfer/resources/examples/stable_diffusion/: data_loader.py  experiment.yaml  model_loader.py
apps/accelerate/cloud_surfer/surfer/: __init__.py  __main__.py  log.py
apps/accelerate/cloud_surfer/surfer/cli/: experiments.py  main.py  runner.py  surfer.py  util.py
apps/accelerate/cloud_surfer/surfer/cli/commands/: cmd_experiments.py  cmd_init.py  cmd_list_accelerators.py  cmd_run.py  common.py  util.py
apps/accelerate/cloud_surfer/surfer/common/: constants.py  exceptions.py  models.py  schemas.py
apps/accelerate/cloud_surfer/surfer/computing/: __init__.py  clusters.py  models.py  schemas.py  services.py
apps/accelerate/cloud_surfer/surfer/computing/providers/: aws.py  azure.py  gcp.py
apps/accelerate/cloud_surfer/surfer/core/: clusters.py  config.py  constants.py  experiments.py  models.py  operations.py  orchestrators.py  schemas.py  services.py  storage.py  util.py
apps/accelerate/cloud_surfer/surfer/optimization/: adapters.py  converters.py  models.py  operations.py
apps/accelerate/cloud_surfer/surfer/runner/: __init__.py  __main__.py  cli.py  models.py  services.py  util.py
apps/accelerate/cloud_surfer/surfer/storage/: __init__.py  aws.py  azure.py  clients.py  gcp.py  models.py  util.py
apps/accelerate/cloud_surfer/surfer/storage/providers/: aws.py  azure.py  gcp.py
apps/accelerate/cloud_surfer/surfer/utilities/: datetime_utils.py  file_utils.py  nebullvm_utils.py  python_utils.py  string_utils.py
apps/accelerate/cloud_surfer/tests/: __init__.py  test_log.py  test_utils.py
apps/accelerate/cloud_surfer/tests/assets/: data_loaders.py  model_evaluators.py  model_loaders.py
apps/accelerate/cloud_surfer/tests/assets/latencies/: latencies_model1_id2.json
apps/accelerate/cloud_surfer/tests/cli/: test_common.py  test_experiments.py  test_runner.py  test_surfer.py  test_util.py
apps/accelerate/cloud_surfer/tests/common/: test_schemas.py
apps/accelerate/cloud_surfer/tests/computing/: test_clusters.py  test_models.py
apps/accelerate/cloud_surfer/tests/computing/providers/: test_azure.py
apps/accelerate/cloud_surfer/tests/core/: test_clusters.py  test_config.py  test_experiments.py  test_models.py  test_orchestrator.py  test_schemas.py  test_services.py  test_storage.py  test_util.py
apps/accelerate/cloud_surfer/tests/optimization/: test_converters.py  test_models.py  test_operations.py
apps/accelerate/cloud_surfer/tests/runner/: test_services.py  test_util.py
apps/accelerate/cloud_surfer/tests/storage/: test_azure.py  test_gcp.py
apps/accelerate/cloud_surfer/tests/util/: test_utils.py
apps/accelerate/cloud_surfer/tests/utilities/: test_file_utils.py  test_python_utils.py  test_string_utils.py
nebullvm/tools/: logger.py
