[tool.poetry]
name = "cloud-surfer"
version = "0.1.0"
description = "Cloud Surfer"
authors = [
    "Michel Zanotti <m.zanotti@nebuly.ai>",
    "Diego Fiori <d.fiori@nebuly.ai>",
]
readme = "README.md"
packages = [{ include = "surfer" }]

[tool.poetry.scripts]
surfer = "surfer.cli.surfer:main"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
typer = "^0.7.0"
ray = { extras = ["default"], version = "^2.3.0" }
speedster = "^0.2.1"
rich = "^13.3.1"
pyyaml = "^6.0"
pydantic = "^1.10.5"
aiofiles = "^23.1.0"
mnemonic = "^0.20"

# Azure optionals
azure-storage-blob = { version = "^12.15.0", optional = true }
azure-identity = { version = "^1.12.0", optional = true }
azure-cli = { version = "^2.46.0", optional = true }
azure-core = { version = "^1.26.3", optional = true }

# GCP optionals
google-cloud-storage = { version = "^2.7.0", optional = true }
aiohttp = "^3.8.4"

[tool.poetry.extras]
azure = [
    "azure-storage-blob",
    "azure-core",
    "azure-identity",
    "azure-cli"
]
gcp = [
    "google-cloud-storage"
]
all = [
    # Azure
    "azure-storage-blob",
    "azure-core",
    "azure-identity",
    "azure-cli",
    # GCP
    "google-cloud-storage",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.2.1"

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
minversion = "7.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
