[tool.poetry]
name = "cloud-surfer"
version = "0.1.0"
description = "Cloud Surfer"
authors = [
    "Michel Zanotti <m.zanotti@nebuly.ai>",
    "Diego Fiori <d.fiori@nebuly.ai>",
]
readme = "README.md"
packages = [{ include = "surfer" }]

[tool.poetry.scripts]
surfer = "surfer.cli.surfer:main"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
typer = "^0.7.0"
ray = {extras = ["default"], version = "^2.3.0"}
rich = "^13.3.1"
pyyaml = "^6.0"
pydantic = "^1.10.5"
aiofiles = "^23.1.0"
mnemonic = "^0.20"
aiohttp = "^3.8.4"
py-cpuinfo = "^9.0.0"
nebullvm = { git = "https://github.com/nebuly-ai/nebullvm.git", rev = "6b79d86" }

# Azure optionals
azure-storage-blob = { version = "^12.15.0", optional = true }
azure-identity = { version = "^1.12.0", optional = true }
azure-cli = { version = "^2.46.0", optional = true }
azure-core = { version = "^1.26.3", optional = true }

# GCP optionals
google-cloud-storage = { version = "^2.7.0", optional = true }
google-api-python-client = { version = "^2.81.0", optional = true }

[tool.poetry.extras]
azure = [
    "azure-storage-blob",
    "azure-core",
    "azure-identity",
    "azure-cli"
]
gcp = [
    "google-cloud-storage",
    "google-api-python-client",
]
all = [
    # Azure
    "azure-storage-blob",
    "azure-core",
    "azure-identity",
    "azure-cli",
    # GCP
    "google-cloud-storage",
    "google-api-python-client",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.2.1"
torch = "^2.0.0"

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
minversion = "7.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
